--- a/configuration.properties
+++ b/configuration.properties
@@ -4,3 +4,25 @@ mail=sevilayt1975@gmail.com
 password=sevilay1975
 hepsiburada=C:\\Users\\sevil\\IdeaProjects\\T-108AppiumWithCucumber\\APP\\hepsiburada-5-12-0.apk
 
+
+
+isim=ayse
+soyisim=Legend5
+sehir=Antalya
+yas=25
+meslek=INSAAT MUHENDISI
+
+expected=https://qa.mealscenter.com/account/login
+
+mailMeal=anevzatcelik@gmail.com
+sifre=T108.T108
+
+olumsuzmail1=nevzat@gmail.com
+olumsuzsifre1=T108.t108.
+
+olumsuzmail2=nevzatcelik@gmail.com
+olumsuzsifre2=T108.t108.
+
+olumsuzmail3=nevzatcelikt108@gmail.com
+olumsuzsifre3=T108.t108.
+
